fixed stretching of images in lightgallery

--- a/src/public/wp-content/themes/app/html/app/css/blocks/gallery/single/lightgallery.scss
+++ b/src/public/wp-content/themes/app/html/app/css/blocks/gallery/single/lightgallery.scss
@@ -386,6 +386,17 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   transition: border-color 0.3s ease, transform 80ms;
   max-height: 61px;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0, 0, 0, 25%);
+
+  &.lg-thumb-horizontal {
+    background-color: transparent;
+    img {
+      width: 100%;
+    }
+  }
 
   &:active {
     transform: scale(.95);
@@ -396,7 +407,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   }
 
   img {
-    width: 100%;
+    // width: 100%;
     height: 100%;
     object-fit: cover;
   }
@@ -941,18 +952,11 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   z-index: 1060;
 }
 
-.lg-outer .lg-item.lg-current .lg-object {
-  @include mobile {
-    // transform: scale(1.05) !important;
-  }
-}
-
 .lg-outer .lg-image {
   display: inline-block;
   vertical-align: middle;
   max-width: 100%;
   max-height: 100%;
-  width: 100%;
   height: 100%;
   object-fit: cover;
 
@@ -961,6 +965,10 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
     height: auto !important;
     object-fit: contain !important;
   }
+}
+
+.lg-outer .lg-img-horizontal .lg-image {
+  width: 100%;
 }
 
 .lg-outer.lg-show-after-load .lg-item .lg-object, .lg-outer.lg-show-after-load .lg-item .lg-video-play {
